--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -296,6 +296,7 @@ jobs:
             nuget sources add -name github -source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
           }
           nuget push .\output\*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }}
+          Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "## Publish to GitHub Feed`n"
           Write-Output "GitHub Event: ${{ github.event }}" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
 
       # Pushes to nuget.org Only if the repo is public and the owner is PepperDash
@@ -303,13 +304,16 @@ jobs:
         shell: pwsh
         if: github.repository_owner == 'PepperDash' && github.repository.visibility == 'public'
         run: |
+          Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "## Publish to Nuget.org`n"
           Write-Output "Publishing ${{ github.repository }} to NuGet.org" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
           nuget setApiKey ${{ secrets.NUGET_API_KEY }} -Source https://api.nuget.org/v3/index.json
           nuget push .\output\*.nupkg -Source https://api.nuget.org/v3/index.json
 
       - name: Skipping publish to Nuget.org (non public repos)        
         if: github.repository_owner != 'PepperDash' || github.repository.visibility != 'public'
-        run: Write-Output "Repository is not public, skipping publishing to NuGet.org." | Add-Content -Path $env:GITHUB_STEP_SUMMARY
+        run: |
+          Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "## Publish to Nuget.org`n"
+          Write-Output "Repository is not public, skipping publishing to NuGet.org." | Add-Content -Path $env:GITHUB_STEP_SUMMARY
     
       # Create the release on the source repo
       - name: Get release notes
