--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -44,42 +44,46 @@ jobs:
       - name: Update AssemblyInfo.cs
         shell: pwsh
         run: |
+          # Update AssemblyInfo.cs files with the version from the environment variable VERSION
           function Update-SourceVersion {
-          Param ([string]$Version)
-          #$fullVersion = $Version
-          $baseVersion = [regex]::Match($Version, "(\d+.\d+.\d+).*").captures.groups[1].value
-          $NewAssemblyVersion = 'AssemblyVersion("' + $baseVersion + '.*")'
-          Write-Output "AssemblyVersion = $NewAssemblyVersion"
-          $NewAssemblyInformationalVersion = 'AssemblyInformationalVersion("' + $Version + '")'
-          Write-Output "AssemblyInformationalVersion = $NewAssemblyInformationalVersion"
-          foreach ($o in $input) {
-              Write-output $o.FullName
-              $TmpFile = $o.FullName + ".tmp"
-              get-content $o.FullName |
-              ForEach-Object {
-                  $_ -replace 'AssemblyVersion\(".*"\)', $NewAssemblyVersion } |
-              ForEach-Object {
-                  $_ -replace 'AssemblyInformationalVersion\(".*"\)', $NewAssemblyInformationalVersion
-              }  > $TmpFile 
-              move-item $TmpFile $o.FullName -force
-            }
-          }
-          function Update-AllAssemblyInfoFiles ( $version ) {
-              foreach ($file in "AssemblyInfo.cs", "AssemblyInfo.vb" ) {
-                  get-childitem -Path $Env:GITHUB_WORKSPACE -recurse | Where-Object { $_.Name -eq $file } | Update-SourceVersion $version ;
+              Param ([string]$Version)
+              #$fullVersion = $Version
+              $baseVersion = [regex]::Match($Version, "(\d+.\d+.\d+).*").captures.groups[1].value
+              $NewAssemblyVersion = 'AssemblyVersion("' + $baseVersion + '.*")'
+              Write-Output "AssemblyVersion = $NewAssemblyVersion"
+              $NewAssemblyInformationalVersion = 'AssemblyInformationalVersion("' + $Version + '")'
+              Write-Output "AssemblyInformationalVersion = $NewAssemblyInformationalVersion"
+              foreach ($o in $input) {
+                  Write-output $o.FullName
+                  $TmpFile = $o.FullName + ".tmp"
+                  get-content $o.FullName |
+                  ForEach-Object {
+                      $_ -replace 'AssemblyVersion\(".*"\)', $NewAssemblyVersion } |
+                  ForEach-Object {
+                      $_ -replace 'AssemblyInformationalVersion\(".*"\)', $NewAssemblyInformationalVersion
+                  }  > $TmpFile 
+                  move-item $TmpFile $o.FullName -force
               }
           }
+
+          # Update all AssemblyInfo.cs files in the repository with the version from the environment variable VERSION
+          function Update-AllAssemblyInfoFiles ( $version ) {
+              foreach ($file in "AssemblyInfo.cs", "AssemblyInfo.vb" ) {
+                  get-childitem -Path $Env:GITHUB_WORKSPACE -recurse | Where-Object { $_.Name -eq $file } | Update-SourceVersion $version 
+              }
+          }
+
           # validate arguments
-          $r = [System.Text.RegularExpressions.Regex]::Match($Env:VERSION, "\d+\.\d+\.\d+.*");          
+          $r = [System.Text.RegularExpressions.Regex]::Match($Env:VERSION, "\d+\.\d+\.\d+.*")          
           if ($r.Success) {
-              Write-Output "Updating Assembly Version to $Env:VERSION ...";
-              Update-AllAssemblyInfoFiles $Env:VERSION;
+              Write-Output "Updating Assembly Version to $Env:VERSION ..."
+              Update-AllAssemblyInfoFiles $Env:VERSION
           }
           else {
-              Write-Output " ";
+              Write-Output " "
               Write-Output "Error: Input version $Env:VERSION does not match x.y.z format!"
-              Write-Output " ";
-              Write-Output "Unable to apply version to AssemblyInfo.cs files";
+              Write-Output " "
+              Write-Output "Unable to apply version to AssemblyInfo.cs files"
           }
       
       # Restore Nuget Packages
@@ -94,58 +98,67 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
         
       # Get the SLN Path & file
-      - name: Get SLN Path & SLN File
+      - name: Get Project Info
         shell: pwsh
         run: |
           $workspace = $Env:GITHUB_WORKSPACE
-          $searchPath = "*.3Series.sln"
+          $solution_filter = "*.3Series.sln"
 
-          $solution_file = Get-ChildItem -Path $workspace -Filter $slnSearchPattern -Recurse
+          $solution_file = Get-ChildItem -Path $workspace -Filter $solution_filter -Recurse
 
           Write-Output "Solution File: $($solution_file.BaseName)"
           Write-Output "Solution Path: $($solution_file.Name)"
+          Write-Output "Solution Directory: $($solution_file.DirectoryName)"
 
           Write-Output "SOLUTION_FILE=$($solution_file.BaseName)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Output "SOLUTION_PATH=$($solution_file.Name)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append  
+          Write-Output "SOLUTION_DIRECTORY=$($solution_file.DirectoryName)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append  
 
-          # Write-Output "Searching for .csproj references in $($solution_file.Name)..."
-          # $csprojPaths = @()
-          # # Regex to find Project lines and capture the relative csproj path
-          # $projectRegex = 'Project\("{[A-F0-9-]+}"\) = "[^"]+", "([^"]+\.csproj)", "{[A-F0-9-]+}"'
+          $repoFullName = "${{ github.repository }}"
+          $repoName = $repoFullName.Split('/')[-1]
+          $makeModelParts = $repoName -split '-'
+          if ($makeModelParts.Length -ge 2) {
+              $make = $makeModelParts[1]
+          } else {    
+              # Fallback to the first part
+              $make = $makeModelParts[0] 
+          }
 
-          # Get-Content -Path $solution_file.FullName | ForEach-Object {
-          #     if ($_ -match $projectRegex) {
-          #         $relativeCsprojPath = $Matches[1]
-          #         # Construct the full path relative to the SLN directory
-          #         $fullCsprojPath = Join-Path -Path $solution_file.DirectoryName -ChildPath $relativeCsprojPath
-          #         $csprojPaths += $fullCsprojPath
-          #         Write-Output "  Found CSPROJ reference: $relativeCsprojPath"
-          #         Write-Output "  Full CSPROJ Path: $fullCsprojPath"
-          #     }
-          # }
+          if ($makeModelParts.Length -gt 2) {
+              $model = $makeModelParts[2..($makeModelParts.Length - 1)] -join ' '
+          } else {    
+              $model = $makeModelParts[1]
+          }
 
-          # if ($csprojPaths.Count -eq 0) {
-          #     Write-Warning "No .csproj references found in $($solution_file.Name)."
-          # } elseif ($csprojPaths.Count -gt 1) {
-          #     Write-Warning "Multiple .csproj references found. You might need to adjust logic depending on which one is needed."
-          #     # Example: Set an environment variable with the first one found
-          #     # $firstCsproj = $csprojPaths[0]
-          #     # Write-Output "CSPROJ_FILE=$firstCsproj" # | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          # } else {
-          #     # Exactly one found
-          #     $csprojFile = $csprojPaths[0]
-          #     $csprojFileName = Split-Path -Path $csprojFile -Leaf
-          #     $csprojFileName = $csprojFileName -Replace ".csproj", "" -Replace ".3Series", ""
-          #     Write-Output "CSPROJ_FILE=$csprojFile" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          #     Write-Output "CSPROJ_FILE_NAME=$csprojFileName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          # }
+          $makeModel = if ($make -and $model) { "$make $model" } else { "" }
+          $title = (Get-Culture).TextInfo.ToTitleCase("$make.$model")
+          $epiName = $title -replace ' ', ''
+          $epiId = "PepperDash.Essentials.Plugin." + $assemblyName
+
+          Write-Output "Repo Full Name: $repoFullName"
+          Write-Output "Repo Name: $repoName"
+          Write-Output "EPI Make/Model: $makeModel"
+          Write-Output "EPI Make: $make"
+          Write-Output "EPI Model: $model"
+          Write-Output "EPI Title: $title"
+          Write-Output "EPI Name: $assemblyName"
+          Write-Output "EPI ID: $id"
+
+          Write-Output "REPO_FULL_NAME=$repoFullName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "REPO_NAME=$repoName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "EPI_MAKE_MODEL=$makeModel" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "EPI_MAKE=$make" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "EPI_MODEL=$model" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "EPI_TITLE=$title" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "EPI_NAME=$epiName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "EPI_ID=$epiId" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
                   
 
       # Build the solution using the docker image
       - name: Build Solution
         shell: powershell
         run: |
-          Write-Output "Preparing to build solution`n- Solution File: $($Env:SOLUTION_FILE)`n- Solution Path: $($Env:SOLUTION_PATH)`n- Build Type: $($ENV:BUILD_TYPE)`n-Version: $($ENV:VERSION)`n- Workspace: $($Env:GITHUB_WORKSPACE)"
+          Write-Output "Preparing to build solution`n- Solution File: $($Env:SOLUTION_FILE)`n- Solution Path: $($Env:SOLUTION_PATH)`n- Solution Directory: $($Env:SOLUTION_DIRECTORY)`n- Build Type: $($ENV:BUILD_TYPE)`n-Version: $($ENV:VERSION)`n- Workspace: $($Env:GITHUB_WORKSPACE)"
           Invoke-Expression "docker run --rm --mount type=bind,source=""$($Env:GITHUB_WORKSPACE)"",target=""c:\project"" pepperdash/sspbuilder c:\cihelpers\vsidebuild.exe -Solution ""c:\project\$($Env:SOLUTION_PATH)"" -BuildSolutionConfiguration $($ENV:BUILD_TYPE)"
       
       # Copy the build output files to the output directory      
@@ -155,21 +168,19 @@ jobs:
           # GitHub Actions environment variables
           $sourceDir = "$Env:GITHUB_WORKSPACE\src" 
           $destinationDir = "$Env:GITHUB_WORKSPACE\output"
-          #$assemblyName = $Env:CSPROJ_FILE_NAME
+          $assemblyName = $Env:ASSEMBLY_NAME
           $assemblyVersion = $Env:VERSION
 
           # Define the target file extensions (with leading dot)
-          $validExtensions = @(".cpz", ".clz", ".cplz", ".dll")
-
+          $validExtensions = @(".cpz", ".clz", ".cplz")
+          
           # Create the include patterns for Get-ChildItem -Include
-          #$includePatterns = $validExtensions | ForEach-Object { "$assemblyName*$_" }
           $includePatterns = $validExtensions | ForEach-Object { "*$_" }
 
           Write-Output "Target File Extensions: $($validExtensions -join ', ')"
           Write-Output "Include Patterns: $($includePatterns -join ', ')"
           Write-Output "Source Directory: $sourceDir"
           Write-Output "Destination Directory: $destinationDir"
-          Write-Output "Assembly Name: $assemblyName"
           Write-Output "Assembly Version: $assemblyVersion"
 
           # Create the destination directory if it doesn't exist.
@@ -178,10 +189,33 @@ jobs:
           Write-Output "Searching for files with extensions $($validExtensions -join ', ') in $sourceDir..."
 
           # Find files recursively in the source directory with the specified extensions
-          # and copy them to the destination directory.
-          Get-ChildItem -Path $sourceDir -Recurse | Where-Object {
-              $_.Name -like "*$assemblyName*" -and $validExtensions -contains $_.Extension
-          } | ForEach-Object {
+          $filesToCopy = Get-ChildItem -Path $sourceDir -Recurse -Include $includePatterns
+
+          # Create a list to store all files to copy, including matching base name files
+          $allFilesToCopy = @()
+
+          # Iterate through each file found with the initial include patterns
+          $filesToCopy | ForEach-Object {
+              $file = $_
+              $baseName = $file.BaseName
+
+              # Add the current file to the list
+              $allFilesToCopy += $file
+
+              # Search for any files in $sourceDir with a matching base name
+              $matchingFiles = Get-ChildItem -Path $sourceDir -Recurse | Where-Object { 
+                  $_.BaseName -eq $baseName -and $_.Extension -eq ".dll" 
+              }
+
+              # Add the matching files to the list
+              $allFilesToCopy += $matchingFiles
+          }
+
+          # Remove duplicates from the list
+          $allFilesToCopy = $allFilesToCopy | Sort-Object FullName -Unique
+
+          # Copy all files to the destination directory
+          $allFilesToCopy | ForEach-Object {
               Write-Output "Copying $($_.FullName) to $destinationDir"
               $_ | Copy-Item -Destination $destinationDir -Force
           }
@@ -193,16 +227,13 @@ jobs:
           Write-Output "Renaming files in $destinationDir to include assembly version '$assemblyVersion'..."
 
           # Rename the copied files in the destination directory
-          # Use Where-Object for more reliable filtering within the specific directory
-          Get-ChildItem -Path $destinationDir | Where-Object { $validExtensions -contains $_.Extension } | ForEach-Object {
+          Get-ChildItem -Path $destinationDir | ForEach-Object {
               $oldName = $_.Name
               $baseName = $_.BaseName
               $extension = $_.Extension # Includes the dot (.)
               $newName = "$baseName.$assemblyVersion$extension" # Just the new filename
-              # $newFullName = Join-Path -Path $destinationDir -ChildPath $newName # This line is not needed for Rename-Item
               
-              Write-Output "Renaming '$oldName' to '$newName'"
-              # Use $newName (just the filename) for the -NewName parameter
+              Write-Output "Renaming '$oldName' to '$newName'"    
               Rename-Item -Path $_.FullName -NewName $newName -Force 
           }
 
@@ -221,38 +252,33 @@ jobs:
         run: |
           # Remove any existing nuspec files
           Get-ChildItem -Path .\ -Filter *.nuspec -Recurse | Remove-Item -Force
-
-          # Create a new nuspec file
+          
           $year = (Get-Date).Year
-          $repoFullName = "${{ github.repository }}" # Full repository name, including owner
-          $repoName = $repoFullName.Split('/')[-1] # Extracting the repository name part from a URL style path
-          $makeModelParts = $repoName -split '-'
-          $makeModel = $makeModelParts[1..($makeModelParts.Length - 1)] -join ' ' # Joining all parts after the first dash
-          $title = (Get-Culture).TextInfo.ToTitleCase($makeModel)
-          $makeModel = $title -replace ' ', '' # Removing spaces for the ID
-          $id = "PepperDash.Essentials.Plugin." + $makeModel
+          
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "## Create Nuspec File`n"
-          Write-Output "Repo: $repoFullName" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
-          Write-Output "Repo Name: $repoName" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
-          Write-Output "Make/Model: $makeModel" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
-          Write-Output "Title: $title" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
-          Write-Output "ID: $id" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
+          Write-Output "Repo: ${{ github.repository }}" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
+          Write-Output "Repo Name: $env:REPO_NAME" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
+          Write-Output "Make/Model: $env:EPI_MAKE_MODEL" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
+          Write-Output "Title: $env:EPI_TITLE" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
+          Write-Output "ID: $env:EPI_ID" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
           Write-Output "Owner: ${{ github.repository_owner }}" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
           Write-Output "Output Directory: ${{ github.workspace }}\output" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
+
+          # Create a new nuspec file
           $nuspecContent = @"
           <?xml version='1.0' encoding='utf-8'?>
           <package>
             <metadata>
-              <id>$id</id>
+              <id>$env:EPI_ID</id>
               <version>${{ env.VERSION }}</version>
-              <title>$title</title>
-              <authors>PepperDash Technologies</authors>
-              <owners>pepperdash</owners>
+              <title>$env:EPI_TITLE</title>
+              <authors>PepperDash Technology</authors>
+              <owners>PepperDash</owners>
               <requireLicenseAcceptance>false</requireLicenseAcceptance>
               <license type='file'>LICENSE.md</license>
               <projectUrl>https://github.com/${{ github.repository }}</projectUrl>
               <copyright>Copyright $year</copyright>
-              <description>$repoName Epi</description>
+              <description>$env:REPO_NAME Epi</description>
               <tags>crestron 3series</tags>
               <repository type='git' url='https://github.com/${{ github.repository }}'/>
             </metadata>
@@ -263,6 +289,7 @@ jobs:
             </files>
           </package>
           "@
+          
           # Write the nuspec content to a file
           Write-Output $nuspecContent > ${{ github.workspace }}\project.nuspec
           $nuspec_file = (Get-ChildItem *.nuspec -recurse).BaseName
@@ -279,11 +306,16 @@ jobs:
         shell: pwsh
         if: ${{ !contains( env.NUSPEC_FILE, 'EssentialsPluginTemplate' ) }}
         run: |
-          if (-not (Test-Path -Path ".\project.nuspec")) {
-            Write-Error "NuGet nuspec file not foundCheck if the build process created the package correctly."
+          $filePath = ".\${{ env.NUSPEC_FILE }}.nuspec"
+          
+          # Check if the nuspec file exists before running nuget pack
+          if (-not (Test-Path -Path $filePath)) {
+            Write-Error "NuGet nuspec file not found. Check if the build process created the package correctly."
             exit 1
-          } 
-          nuget pack ".\project.nuspec" -version ${{ env.VERSION }} -OutputDirectory .\output
+          }
+          
+          # pack the nuspec file 
+          nuget pack $filePath -version ${{ env.VERSION }} -OutputDirectory .\output
       
       # Pushes to internal github registry
       - name: Setup and Publish to GitHub feed
@@ -297,6 +329,7 @@ jobs:
             nuget sources add -name github -source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -username pepperdash -password ${{ secrets.GITHUB_TOKEN }}
           }
           nuget push .\output\*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }}
+
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "## Publish to GitHub Feed`n"
           Write-Output "GitHub Event: ${{ github.event.repository.private }}" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
           Write-Output "GitHub Repository: ${{ github.repository }}" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
