--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -132,8 +132,8 @@ jobs:
 
           $makeModel = if ($make -and $model) { "$make $model" } else { "" }
           $title = (Get-Culture).TextInfo.ToTitleCase("$make.$model")
-          $epiName = $title -replace ' ', ''
-          $epiId = "PepperDash.Essentials.Plugin." + $assemblyName
+          $name = $title -replace ' ', ''
+          $id = "PepperDash.Essentials.Plugin." + $title
 
           Write-Output "Repo Full Name: $repoFullName"
           Write-Output "Repo Name: $repoName"
@@ -141,7 +141,7 @@ jobs:
           Write-Output "EPI Make: $make"
           Write-Output "EPI Model: $model"
           Write-Output "EPI Title: $title"
-          Write-Output "EPI Name: $assemblyName"
+          Write-Output "EPI Name: $name"
           Write-Output "EPI ID: $id"
 
           Write-Output "REPO_FULL_NAME=$repoFullName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
@@ -150,8 +150,8 @@ jobs:
           Write-Output "EPI_MAKE=$make" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Output "EPI_MODEL=$model" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Output "EPI_TITLE=$title" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          Write-Output "EPI_NAME=$epiName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          Write-Output "EPI_ID=$epiId" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "EPI_NAME=$name" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "EPI_ID=$id" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
                   
 
       # Build the solution using the docker image
