--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -118,26 +118,23 @@ jobs:
           $repoName = $repoFullName.Split('/')[-1]
           $makeModelParts = $repoName -split '-'
           if ($makeModelParts.Length -ge 2) {
-              $make = $makeModelParts[1]
+              $make = ($makeModelParts[1] -join '').Replace(' ', '')
           } else {    
               # Fallback to the first part
-              $make = $makeModelParts[0] 
+              $make = $makeModelParts[0].Replace(' ', '')
           }
-
           if ($makeModelParts.Length -gt 2) {
-              $model = $makeModelParts[2..($makeModelParts.Length - 1)] -join ' '
+              $model = ($makeModelParts[2..($makeModelParts.Length - 1)] -join '').Replace(' ', '')
           } else {    
-              $model = $makeModelParts[1]
+              $model = $makeModelParts[1].Replace(' ', '')
           }
 
-          $makeModel = if ($make -and $model) { "$make $model" } else { "" }
           # TODO [ ] review for standardization - 4series uses `$make.$model`
           #$title = (Get-Culture).TextInfo.ToTitleCase("$make.$model")
           # TODO [ ] review for standardization - original title implementation
-          $title = (Get-Culture).TextInfo.ToTitleCase("$makeModel")
-          $name = $title -replace ' ', ''
+          $title = (Get-Culture).TextInfo.ToTitleCase("$make") + (Get-Culture).TextInfo.ToTitleCase("$model")
           # TODO [ ] review for standardization - 4series build uses `Plugins`
-          $id = "PepperDash.Essentials.Plugin." + $title
+          $package = "PepperDash.Essentials.Plugin." + ($title -replace ' ', '')
 
           Write-Output "Repo Full Name: $repoFullName"
           Write-Output "Repo Name: $repoName"
@@ -145,8 +142,7 @@ jobs:
           Write-Output "EPI Make: $make"
           Write-Output "EPI Model: $model"
           Write-Output "EPI Title: $title"
-          Write-Output "EPI Name: $name"
-          Write-Output "EPI ID: $id"
+          Write-Output "EPI Package: $package"
 
           Write-Output "REPO_FULL_NAME=$repoFullName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Output "REPO_NAME=$repoName" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
@@ -154,8 +150,7 @@ jobs:
           Write-Output "EPI_MAKE=$make" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Output "EPI_MODEL=$model" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           Write-Output "EPI_TITLE=$title" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          Write-Output "EPI_NAME=$name" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          Write-Output "EPI_ID=$id" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          Write-Output "EPI_PACKAGE=$package" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
                   
 
       # Build the solution using the docker image
@@ -234,7 +229,7 @@ jobs:
               $oldName = $_.Name
               $baseName = $_.BaseName
               $extension = $_.Extension # Includes the dot (.)
-              $newName = "$baseName.$version$extension" # Just the new filename
+              $newName = "$baseName.$assemblyVersion$extension" -Replace '.3Series', ''
               
               Write-Output "Renaming '$oldName' to '$newName'"    
               Rename-Item -Path $_.FullName -NewName $newName -Force 
@@ -263,7 +258,7 @@ jobs:
           Write-Output "Repo Name: $env:REPO_NAME" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
           Write-Output "Make/Model: $env:EPI_MAKE_MODEL" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
           Write-Output "Title: $env:EPI_TITLE" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
-          Write-Output "ID: $env:EPI_ID" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
+          Write-Output "Package: $env:EPI_PACKAGE" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
           Write-Output "Owner: ${{ github.repository_owner }}" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
           Write-Output "Output Directory: ${{ github.workspace }}\output" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
 
@@ -272,7 +267,7 @@ jobs:
           <?xml version='1.0' encoding='utf-8'?>
           <package>
             <metadata>
-              <id>$env:EPI_ID</id>
+              <id>$env:EPI_PACKAGE</id>
               <version>${{ env.VERSION }}</version>
               <title>$env:EPI_TITLE</title>
               <authors>PepperDash Technology</authors>
