fix(workflow): update file renaming logic to use version instead of assemblyVersion

--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -228,7 +228,7 @@ jobs:
               $oldName = $_.Name
               $baseName = $_.BaseName
               $extension = $_.Extension # Includes the dot (.)
-              $newName = "$baseName.$assemblyVersion$extension" -Replace '.3Series', ''
+              $newName = "$baseName.$version$extension" -Replace '.3Series', ''
               
               Write-Output "Renaming '$oldName' to '$newName'"    
               Rename-Item -Path $_.FullName -NewName $newName -Force 
