--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -327,14 +327,14 @@ jobs:
           nuget push .\output\*.nupkg -source github -apikey ${{ secrets.GITHUB_TOKEN }}
 
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "## Publish to GitHub Feed`n"
-          Write-Output "GitHub Event: ${{ github.event.repository.private }}" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
+          Write-Output "GitHub Event: ${{ github.event.repository.visibility }}" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
           Write-Output "GitHub Repository: ${{ github.repository }}" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
           Write-Output "GitHub Repository Visibility: ${{ github.repository.visibility }}" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
 
       # Pushes to nuget.org Only if the repo is public and the owner is PepperDash
       - name: Publish to Nuget.org (public repos only) 
         shell: pwsh
-        if: github.repository_owner == 'PepperDash' && github.repository.visibility == 'public'
+        if: github.repository_owner == 'PepperDash' && github.event.repository.visiblity == 'public'
         run: |
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "## Publish to Nuget.org`n"
           Write-Output "Publishing ${{ github.repository }} to NuGet.org" | Add-Content -Path $env:GITHUB_STEP_SUMMARY
@@ -343,7 +343,7 @@ jobs:
 
       # Skips the publish to nuget.org if the repo is not public or not owned by PepperDash
       - name: Skipping publish to Nuget.org (non public repos)        
-        if: github.repository_owner != 'PepperDash' || github.repository.visibility != 'public'
+        if: github.repository_owner != 'PepperDash' || github.event.repository.visiblity != 'public'
         run: |
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "## Publish to Nuget.org`n"
           Write-Output "Repository is not public, skipping publishing to NuGet.org." | Add-Content -Path $env:GITHUB_STEP_SUMMARY
