fix(workflow): simplify visibility logging message in NuGet.org publishing step

--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -339,7 +339,7 @@ jobs:
           $visibility = ${{ github.event.repository.visibility }}.ToLower()
 
           Write-Output "Repository Owner: $owner"
-          Write-Output "Event Repository Visibility: $visibility"
+          Write-Output "Repository Visibility: $visibility"
 
           Add-Content -Path $env:GITHUB_STEP_SUMMARY -Value "## Publish to Nuget.org`n"          
 
